# aitemp

./: history.md
.kiro/specs/persona-simulator/: design.md  requirements.md  tasks.md
backend/: README.md  WEBSOCKET_README.md  config.py  gpt_assistant.py  main.py  openai_responses_reference.py  pyproject.toml  requirements.txt  test_gpt_assistant.py  websocket_test.html  websocket_test_client.py
persona-simulator/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
persona-simulator/src/: App.tsx  index.css
persona-simulator/src/components/: Navigation.tsx  theme-toggle.tsx
persona-simulator/src/components/ui/: button.tsx  card.tsx  glass-card.tsx  sonner.tsx
persona-simulator/src/hooks/: useWebSocket.ts
persona-simulator/src/lib/: components.tsx  demo-data.ts
persona-simulator/src/pages/: About.tsx  Chat.tsx  ChatCopy.tsx  Details.tsx  Home.tsx  ListCreator.tsx
